--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,7 @@
 <h1 class="mt-4">Dashboard</h1>
 <p class="lead mb-3">Welcome <%= user.name %></p>
 <p class="lead mb-3">
-  <strong>Congratulations!</strong> You are now a member of Finance African
+  <strong>Congratulations!</strong> You are now a member of Financial African
 </p>
 <a
   href="/users/logout"
